create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-section content5 cid-rJSLFsOH8s mbr-parallax-background" id="content5-1j">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-rJSLFsOH8s mbr-parallax-background" id="content5-1j">
 
     
 
@@ -90,7 +90,7 @@
                     <span class="mbr-iconfont mbri-idea" style="color: rgb(79, 73, 67); fill: rgb(79, 73, 67);"></span>
                 </div>
                 <div class="card-box align-center">
-                    <h4 class="card-title mbr-fonts-style display-7"><strong>Explore Our Swevices</strong></h4>
+                    <h4 class="card-title mbr-fonts-style display-7"><strong>Explore Our Services</strong></h4>
                     
                     <div class="mbr-section-btn text-center"><a href="page1.html" class="btn btn-warning-outline display-4">View</a></div>
                 </div>
