--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-rJSMKWi1lL" id="content5-1s">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-rJSMKWi1lL" id="content5-1s">
 
     
 
@@ -68,7 +68,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center mbr-bold mbr-white pb-3 mbr-fonts-style display-1"><em>Please</em></h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-white pb-3 mbr-fonts-style display-1"><strong><em>Contact Us</em></strong></h3>
-                <p class="mbr-text align-center mbr-white pb-3 mbr-fonts-style display-7">Pleas Select a Tab or Scroll Down</p>
+                <p class="mbr-text align-center mbr-white pb-3 mbr-fonts-style display-7">Please Select a Tab or Scroll Down</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-white-outline display-4" href="tel:072 8989 890">Call Us</a> <a class="btn btn-white-outline display-4" href="mailto:kabelo.realk@gmail.com">Mail Us</a></div>
             </div>
         </div>
