create github pages

--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-rJSMKWi1lL" id="content5-1s">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-rJSMKWi1lL" id="content5-1s">
 
     
 
@@ -114,7 +114,7 @@
             </div>
             <!--Right-->
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14375.11724518754!2d28.181636215692322!3d-25.744810738308214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95620e25dab59b%3A0xa24658b427cbf725!2sMadiba%20St%20%26%20Thabo%20Sehume%20St%2C%20Pretoria%20Central%2C%20Pretoria%2C%200002!5e0!3m2!1sen!2sza!4v1576093059730!5m2!1sen!2sza" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
